# Trans-Search

./: .gitignore  API.md  README.md  wrangler.jsonc
admin-frontend/: admin-index.html  index.html
backend/: .env.example  main.py  pyproject.toml
backend-cf/: .dev.vars  .dev.vars.example  package.json  tsconfig.json  wrangler.jsonc
backend-cf/src/: auth.ts  cache.ts  chunk.ts  config.ts  embedding.ts  index.ts  qdrant.ts  rate-limit.ts  rerank.ts  sparse.ts  types.ts
frontend/: app.vue  nuxt.config.ts
frontend-old/admin/: index.html
frontend-old/uesr/: index.html
frontend/composables/: useApi.ts
frontend/pages/: about.vue  config.vue  index.vue  stats.vue
plans/: PR-description.md
