[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.138.1",
  "openai==2.44.0",
  "python-dotenv==1.2.2",
  "qdrant-client==1.18.0",
  "tiktoken==0.13.0",
  "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.54",
]
